--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,6 +1,9 @@
 @import '../globals/variables.scss';
 
 .app.dark {
-  background-color: $gray-700;
-  color: $gray-100;
+  --bg-color: #{$gray-700};
+  --inverted-bg-color: #{$gray-100};
+
+  --primary-color: #{$gray-100};
+  --inveted-primary-color: #{$gray-700};
 }
