--- a/src/app/styles/globals/variables.scss
+++ b/src/app/styles/globals/variables.scss
@@ -1,7 +1,6 @@
 /* Colors */
 
-$gray-100: #FFFFFF;
+$gray-100: #fff;
 $gray-700: #1b1b1b;
-$gray-900: #000000;
-
+$gray-900: #000;
 $blue-500: #1976d2;
