--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -4,16 +4,14 @@
 @import './themes/dark.scss';
 
 .app {
-  font-family: 'Roboto';
-
+  font-family: '"Roboto"', sans-serif;
   background: var(--bg-color);
   color: var(--primary-color);
-
   min-height: 100vh;
 }
 
 .app.duringChangeTheme {
   transition-property: color, background-color;
-  transition-duration: .3s;
+  transition-duration: 0.3s;
   transition-timing-function: ease;
 }
