--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -5,4 +5,5 @@
   --inverted-bg-color: #{$gray-700};
   --primary-color: #{$gray-700};
   --inveted-primary-color: #{$gray-100};
+  --easy-shadow: #{$easy-shadow};
 }
