--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,6 +1,6 @@
 @import '../globals/variables.scss';
 
-.app.dark {
+.appDarkTheme {
   --bg-color: #{$gray-700};
   --inverted-bg-color: #{$gray-100};
   --bg-color-secondary: #{$gray-600};
