--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -1,3 +1,5 @@
+@import 'app/styles/globals/variables.scss';
+
 .modal {
   position: fixed;
   top: 0;
@@ -7,13 +9,13 @@
   opacity: 0;
   pointer-events: none;
   z-index: -1;
-  color: var(--primary-color);
 }
 
 .overlay {
   width: 100%;
   height: 100%;
-  background: var(--overlay-color);
+  background: var(--inverted-bg-color);
+  opacity: 0.8;
   display: flex;
   align-items: center;
   justify-content: center;
