--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -2,6 +2,7 @@
 
 .appDarkTheme {
   --bg-color: #{$gray-700};
+  --bg-color-hover: #{$gray-600};
   --inverted-bg-color: #{$gray-100};
   --bg-color-secondary: #{$gray-600};
   --inverted-bg-color-secondary: #{$gray-600};
