--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -2,6 +2,7 @@
 
 .appLightTheme {
   --bg-color: #{$gray-100};
+  --bg-color-hover: #{$gray-200};
   --inverted-bg-color: #{$gray-700};
   --bg-color-secondary: #{$gray-100};
   --inverted-bg-color-secondary: #{$gray-600};
