--- a/src/app/styles/globals/variables.scss
+++ b/src/app/styles/globals/variables.scss
@@ -2,11 +2,17 @@
 $ui-step: calc(1 / 8);
 
 // Gray
-$gray-100: #fff;
-$gray-200: #e1e1e1;
-$gray-600: #303030;
-$gray-700: #1b1b1b;
-$gray-900: #000;
+$gray-100: #ffffff;
+$gray-200: #e5e5e5;
+$gray-300: #cccccc;
+$gray-400: #b2b2b2;
+$gray-500: #999999;
+$gray-600: #7f7f7f;
+$gray-700: #666666;
+$gray-800: #4c4c4c;
+$gray-900: #333333;
+$gray-1000: #191919;
+$gray-1100: #000000;
 
 // Blue
 $blue-500: #1976d2;
