--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -8,6 +8,10 @@ body {
   color: var(--primary-color);
 }
 
+.addCssVariables {
+  color: var(--primary-color);
+}
+
 .app {
   background: var(--bg-color);
   min-height: 100vh;
