add menu, update react

--- a/src/app/styles/globals/variables.scss
+++ b/src/app/styles/globals/variables.scss
@@ -110,7 +110,9 @@ $medium-box-shadow: 0 4px 4px 0 rgb(0 0 0 / 20%);
 
 // Border-box
 $easy-border: $size-4;
-$medium-border: $size-8;
+$m-border-radius: $size-8;
+$s-border-radius: $size-4;
+$xs-border-radius: $size-2;
 
 // Constansts
 $header-height: $size-56;
