--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -8,10 +8,6 @@ body {
   color: var(--primary-color);
 }
 
-.addCssVariables {
-  color: var(--primary-color);
-}
-
 .app {
   background: var(--bg-color);
   min-height: 100vh;
@@ -26,4 +22,9 @@ body {
 
 * {
   box-sizing: border-box;
+}
+
+img,
+svg {
+  display: block;
 }
