--- a/src/shared/ui/Input/Input.module.scss
+++ b/src/shared/ui/Input/Input.module.scss
@@ -5,7 +5,7 @@
   font-family: $font-family-primary;
   background-color: var(--bg-color-secondary);
   border: 1px solid var(--inverted-bg-color);
-  border-radius: $medium-border;
+  border-radius: $m-border-radius;
   transition: box-shadow 0.3s ease;
   outline: none;
 
