--- a/src/shared/ui/Button/ButtonIcon/ButtonIcon.module.scss
+++ b/src/shared/ui/Button/ButtonIcon/ButtonIcon.module.scss
@@ -1,14 +1,19 @@
 @import 'app/styles/globals/variables.scss';
 
 .buttonIcon {
-  border-radius: $medium-border;
+  border-radius: $m-border-radius;
   background-color: var(--inverted-bg-color);
   height: $size-48;
   width: $size-48;
 }
 
 .buttonIcon svg {
-  height: $size-36;
-  width: $size-36;
+  height: $size-24;
+  width: $size-24;
   fill: var(--inverted-primary-color);
+  margin: 0 auto;
+}
+
+.round {
+  border-radius: 50%;
 }
