--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -18,5 +18,5 @@
   --inverted-primary-color: #{$gray-100};
 
   // variables
-  --easy-shadow: #{$easy-box-shadow};
+  --easy-shadow: #{$easy-box-shadow-bottom};
 }
