--- a/src/shared/ui/Menu/Menu.module.scss
+++ b/src/shared/ui/Menu/Menu.module.scss
@@ -3,9 +3,8 @@
 .menu {
   position: fixed;
   background-color: var(--bg-color);
-  padding: $spacing-8;
   border-radius: $s-border-radius;
-  box-shadow: $medium-box-shadow;
+  box-shadow: var(--medium-box-shadow);
   z-index: 100;
   width: 280px;
 }
