--- a/src/shared/ui/Button/ButtonSquare/ButtonSquare.module.scss
+++ b/src/shared/ui/Button/ButtonSquare/ButtonSquare.module.scss
@@ -8,9 +8,26 @@
   font-weight: 700;
   transition: background-color 0.3s ease;
   color: var(--inverted-primary-color);
+  display: flex;
+  align-items: center;
 
-  &:hover {
-    background-color: var(--inverted-bg-color-hover);
+  &:not(.nonInteractive) {
+    cursor: pointer;
+
+    &:hover {
+      background-color: var(--inverted-bg-color-hover);
+    }
+  }
+}
+
+.buttonSquare.invertedTheme {
+  background-color: var(--bg-color);
+  color: var(--primary-color);
+
+  &:not(.nonInteractive) {
+    &:hover {
+      background-color: var(--bg-color-hover);
+    }
   }
 }
 
@@ -21,4 +38,16 @@
   padding-bottom: $spacing-12;
   padding-left: $spacing-20;
   padding-right: $spacing-20;
+}
+
+.stretch {
+  width: 100%;
+}
+
+.leftNode {
+  margin-right: $spacing-4;
+}
+
+.rightNode {
+  margin-left: $spacing-4;
 }
