--- a/src/shared/ui/Input/Input.module.scss
+++ b/src/shared/ui/Input/Input.module.scss
@@ -10,7 +10,7 @@
   outline: none;
 
   &:focus {
-    box-shadow: $medium-box-shadow-bottom;
+    box-shadow: var(--medium-box-shadow-bottom);
   }
 }
 
