--- a/src/widgets/Header/ui/Header.module.scss
+++ b/src/widgets/Header/ui/Header.module.scss
@@ -2,7 +2,7 @@
 
 .header {
   background-color: var(--bg-color-secondary);
-  box-shadow: var(--easy-shadow);
+  box-shadow: var(--easy-box-shadow-bottom);
   height: $size-56;
   position: fixed;
   width: 100%;
