--- a/src/shared/ui/MenuItem/MenuItem.module.scss
+++ b/src/shared/ui/MenuItem/MenuItem.module.scss
@@ -6,3 +6,10 @@
   margin: #{$spacing-4} #{$spacing-8};
   width: calc(100% - #{$spacing-16});
 }
+
+.menuItem a {
+  text-align: left;
+  border-radius: 0;
+  margin: #{$spacing-4} #{$spacing-8};
+  width: calc(100% - #{$spacing-16});
+}
