--- a/src/shared/ui/Button/ButtonIcon/ButtonIcon.module.scss
+++ b/src/shared/ui/Button/ButtonIcon/ButtonIcon.module.scss
@@ -18,6 +18,9 @@
   width: $size-24;
   fill: var(--inverted-primary-color);
   margin: 0 auto;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .round {
