--- a/src/shared/ui/Button/ButtonIconUI/ButtonIconUI.module.scss
+++ b/src/shared/ui/Button/ButtonIconUI/ButtonIconUI.module.scss
@@ -1,6 +1,6 @@
 @import 'app/styles/globals/variables.scss';
 
-.buttonIcon {
+.buttonIconUI {
   border-radius: $m-border-radius;
   background-color: var(--inverted-bg-color);
   height: $size-48;
@@ -9,11 +9,11 @@
   cursor: pointer;
 }
 
-.buttonIcon:hover {
+.buttonIconUI:hover {
   background-color: var(--inverted-bg-color-hover);
 }
 
-.buttonIcon svg {
+.buttonIconUI svg {
   height: $size-24;
   width: $size-24;
   fill: var(--inverted-primary-color);
