--- a/src/widgets/Header/ui/Header.module.scss
+++ b/src/widgets/Header/ui/Header.module.scss
@@ -1,13 +1,14 @@
 @import 'app/styles/globals/variables.scss';
 
 .header {
-  background-color: var(--bg-color-secondary);
+  background-color: var(--bg-color);
   box-shadow: var(--easy-box-shadow-bottom);
   height: $size-56;
   position: fixed;
   width: 100%;
   left: 0;
   top: 0;
+  z-index: 100;
 }
 
 .headerContainer {
